clean up data directory